# routers/commentsRouter_controllers.go
@@ -46,7 +46,7 @@ func init() {
     beego.GlobalControllerRouter["PMM/controllers:OtherController"] = append(beego.GlobalControllerRouter["PMM/controllers:OtherController"],
         beego.ControllerComments{
             Method: "ShowS3Image",
-            Router: "/file/:data/:tipe",
+            Router: "/file/:data",
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
